--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,14 @@
     <script type="text/javascript" src="./scripts/graphical.js"></script>
     <script type="text/javascript" src="./scripts/text.js"></script>
     <script type="text/javascript" src="./scripts/export.js"></script>
+    <script type="text/javascript" src="./scripts/render.js"></script>
     <script type="text/javascript" src="./scripts/copyToClipboard-min.js"></script>
     <link rel="stylesheet" href="css/graphical.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/menubar.css">
     <link rel="stylesheet" href="css/tabbar.css">
     <link rel="stylesheet" href="css/text.css">
+    <link rel="stylesheet" href="css/render.css">
     <link href="fa/css/all.css" rel="stylesheet"> 
   </head>
   <body onload="setup()">
@@ -90,6 +92,7 @@
       <div class="tabbar">
         <div class="tabbar-item tabbar-item-active" id="graphical-tab">graphical</div>
         <div class="tabbar-item" id="text-tab">text</div>
+        <div class="tabbar-item" id="render-tab">render (experimental)</div>
       </div>
       <div class="graphical" id="graphical">
         <div class="graphical-effects">
@@ -113,6 +116,9 @@
       </div>
       <div class="text" id="text" style="display: none;">
         <div class="text-container" id="text-container"></div>
+      </div>
+      <div class="render" id="render" style="display: none;">
+        <canvas class="render-canvas" id="render-canvas" width="800" height="800"></canvas>
       </div>
     </div>
   </body>
