implement x and y properly

--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
       </div>
       <div class="render" id="render" style="display: none;">
         <canvas class="render-canvas" id="render-canvas" width="800" height="800"></canvas>
-        <div class="render-error" id="render-error">Error: TestError (ln 0)</div>
+        <div class="render-error" id="render-error" style="display: none;">Error: TestError (ln 0)</div>
       </div>
     </div>
   </body>
