fix intro, null outputs

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="./scripts/text.js"></script>
     <script type="text/javascript" src="./scripts/export.js"></script>
     <script type="text/javascript" src="./scripts/render.js"></script>
+    <script type="text/javascript" src="./scripts/intro.js"></script>
     <script type="text/javascript" src="./scripts/copyToClipboard-min.js"></script>
     <link rel="stylesheet" href="css/graphical.css">
     <link rel="stylesheet" href="css/main.css">
@@ -118,6 +119,7 @@
                   <li>CTRL-S now saves</li>
                   <li>Render: Implemented X and Y</li>
                   <li>Render: Display render errors</li>
+                  <li>Render: Fixed an issue with null outputs</li>
                 </ul>
               </div>
             </div>
