--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,9 @@
           </div>
         </div>
         <div class="dialog" style="display: none" id="resize-dialog">
-          <input type="text" id="graphical-wsize" placeholder="Width">
-          <input type="text" id="graphical-hsize" placeholder="Height">
-          <div class="button dismiss-button" id="graphical-resize">Change Size</div>
+          <input type="text" class="ls-textbox" id="graphical-wsize" placeholder="Width">
+          <input type="text" class="ls-textbox" id="graphical-hsize" placeholder="Height">
+          <div class="ls-button dismiss-button" id="graphical-resize">Change Size</div>
         </div>
         <div class="export-dialog" style="display: none" id="export-dialog">
           <div class="output-header">
@@ -107,8 +107,8 @@
           </div>
         </div>
         <div class="intro-buttons">
-          <div class="button" id="intro-new">New</div>
-          <div class="button" id="intro-open">Open</div>
+          <div class="ls-button" id="intro-new">New</div>
+          <div class="ls-button" id="intro-open">Open</div>
           <div class="intro-update">
             <div class="intro-update-header">what's new: 1.0 final</div>
             <div class="intro-update-container">
