--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <div class="dialogs">
         <div class="dialog" style="display: none" id="about-dialog">
           <h1>Laser Studio</h1>
-          <div class="about-version">1.0 beta</div>
+          <div class="about-version">1.1</div>
           <div class="about-copyright">
             Licensed under the Apache License 2.0<br>
             © 2020 william341, Chrnan6710. Some rights reserved.
@@ -102,7 +102,7 @@
       <div class="intro" id="intro">
         <div class="intro-info">
           <div class="intro-brand">Laser Studio</div class="intro-brand">
-          <div class="intro-version">1.0 beta</div>
+          <div class="intro-version">1.1</div>
           <div class="intro-copyright">
             Licensed under the Apache License 2.0<br>
             © 2020 william341, Chrnan6710.
@@ -112,19 +112,13 @@
           <div class="ls-button" id="intro-new">New</div>
           <div class="ls-button" id="intro-open">Open</div>
           <div class="intro-update">
-            <div class="intro-update-header">what's new: 1.0 final</div>
+            <div class="intro-update-header">what's new: 1.1</div>
             <div class="intro-update-container">
               <div class="intro-update-info">
                 <ul>
-                  <li>Added introduction screen</li>
-                  <li>Added improved saving</li>
-                  <li>CTRL-S now saves</li>
-                  <li>Various GUI polish</li>
-                  <li>Render: Implemented X and Y</li>
-                  <li>Render: Display render errors</li>
-                  <li>Render: Fixed an issue with null outputs</li>
-                  <li>Render: Allow zooming in and out</li>
-                  <li>Graphical: Added color support</li>
+                  <li>Graphical: Added undo button (Edit -> Undo or CTRL-Z)</li>
+                  <li>Graphical: Added grid</li>
+                  <li>Graphical: #000000 no longer counts as a pixel</li>
                 </ul>
               </div>
             </div>
