Tab layout for editor

--- a/src/index.html
+++ b/src/index.html
@@ -148,6 +148,24 @@
         </div>
       </div>
       <div class="text" id="text" style="display: none;">
+        <div class="text-sidebar">
+          <div class="text-sidebar-section" id="text-sidebar-expression">
+            <div class="text-sidebar-header">expression</div>
+            <div class="text-sidebar-item" id="text-sidebar-expitem">Expression</div>
+          </div>
+          <div class="text-sidebar-section" id="text-sidebar-effects">
+            <div class="text-sidebar-header">effects</div>
+            <div class="text-sidebar-item">Effect 1</div>
+            <div class="text-sidebar-item">Effect 2</div>
+            <div class="text-sidebar-item">Effect 3</div>
+          </div>
+          <div class="text-sidebar-section" id="text-sidebar-functions">
+            <div class="text-sidebar-header">functions</div>
+            <div class="text-sidebar-item">func1()</div>
+            <div class="text-sidebar-item">func2()</div>
+            <div class="text-sidebar-item">func3()</div>
+          </div>
+        </div>
         <div class="text-container" id="text-container"></div>
       </div>
       <div class="render" id="render" style="display: none;">
