Add new buttons for effects and functions

--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
       </div>
       <div class="intro" id="intro">
         <div class="intro-info">
-          <div class="intro-brand">Laser Studio</div class="intro-brand">
+          <div class="intro-brand">Laser Studio</div>
           <div class="intro-version">1.1</div>
           <div class="intro-copyright">
             Licensed under the Apache License 2.0<br>
@@ -154,13 +154,33 @@
             <div class="text-sidebar-item" id="text-sidebar-expitem">Expression</div>
           </div>
           <div class="text-sidebar-section" id="text-sidebar-effects">
-            <div class="text-sidebar-header">effects</div>
+            <div class="text-sidebar-header">
+              effects
+              <div class="text-add-menu">
+                <div class="text-add-file" id="text-effects-add-file">
+                  <i class="fas fa-file"></i>
+                </div>
+                <div class="text-add-new" id="text-effects-add-new">
+                  <i class="fas fa-plus"></i>
+                </div>
+              </div>
+            </div>
             <div class="text-sidebar-item">Effect 1</div>
             <div class="text-sidebar-item">Effect 2</div>
             <div class="text-sidebar-item">Effect 3</div>
           </div>
           <div class="text-sidebar-section" id="text-sidebar-functions">
-            <div class="text-sidebar-header">functions</div>
+            <div class="text-sidebar-header">
+              functions
+              <div class="text-add-menu">
+                <div class="text-add-file" id="text-functions-add-file">
+                  <i class="fas fa-file"></i>
+                </div>
+                <div class="text-add-new" id="text-functions-add-new">
+                  <i class="fas fa-plus"></i>
+                </div>
+              </div>
+            </div>
             <div class="text-sidebar-item">func1()</div>
             <div class="text-sidebar-item">func2()</div>
             <div class="text-sidebar-item">func3()</div>
