add buttons for effects, create new effects, allow editing effects

--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,7 @@
           <div class="text-sidebar-files">
             <div class="text-sidebar-section" id="text-sidebar-expression">
               <div class="text-sidebar-header">expression</div>
-              <div class="text-sidebar-item" id="text-sidebar-expitem">Expression</div>
+              <div class="text-sidebar-item text-sidebar-active" id="text-sidebar-expitem">Expression</div>
             </div>
             <div class="text-sidebar-section" id="text-sidebar-effects">
               <div class="text-sidebar-header">
@@ -171,9 +171,6 @@
                   </div>
                 </div>
               </div>
-              <div class="text-sidebar-item">Effect 1</div>
-              <div class="text-sidebar-item">Effect 2</div>
-              <div class="text-sidebar-item">Effect 3</div>
             </div>
             <div class="text-sidebar-section" id="text-sidebar-snippets">
               <div class="text-sidebar-header">
