--- a/src/index.html
+++ b/src/index.html
@@ -217,6 +217,17 @@
                   <div class="text-sidebar-properties-header">ParameterCount</div>
                   <div class="text-sidebar-properties-option" id="properties-effect-pcount">0</div>
                 </div>
+                <div class="text-sidebar-properties-divider"></div>
+                <div class="text-sidebar-header">
+                  parameters
+                  <div class="text-properties-add-menu">
+                    <div class="text-add-new" id="properties-effect-add-param">
+                      <i class="fas fa-plus"></i>
+                    </div>
+                  </div>
+                </div>
+                <div id="text-sidebar-effect-parameters">
+                </div>
               </div>
             </div>
           </div>
