--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       <div class="dialogs">
         <div class="dialog" style="display: none" id="about-dialog">
           <h1>Laser Studio</h1>
-          <div class="about-version">2.0 pre-alpha</div>
+          <div class="about-version">2.0 alpha</div>
           <div class="about-copyright">
             Licensed under the Apache License 2.0<br>
             © 2020 william341, Chrnan6710. Some rights reserved.
@@ -104,7 +104,7 @@
       <div class="intro" id="intro">
         <div class="intro-info">
           <div class="intro-brand">Laser Studio</div>
-          <div class="intro-version">2.0 pre-alpha</div>
+          <div class="intro-version">2.0 alpha</div>
           <div class="intro-copyright">
             Licensed under the Apache License 2.0<br>
             © 2020 william341, Chrnan6710.
@@ -119,10 +119,9 @@
               <div class="intro-update-info">
                 <ul>
                   <li>Unfinished: Effects system</li>
-                  <li>Unfinished: Snippets system</li>
                   <li>Not yet started: Increase/decrease dot size</li>
                   <li>Not yet started: Improved support for variable<br>declarations in the transpiler.</li>
-                  <li>Unfinished: Allow disabling compiler features</li>
+                  <li>Allow disabling compiler features</li>
                 </ul>
               </div>
             </div>
